--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
-results-1422909295.bindata binary
-results-1422910886.bindata binary
+results-1422909295-1000000.bindata binary
+results-1422910886-1000000.bindata binary
+results-1422915437-100000.bindata binary
+results-1422914242-1000.bindata binary
