Removing old / unused cruft.
Also restoring the sign-out functionality.

--- a/application/static/js/config.js.sample
+++ b/application/static/js/config.js.sample
@@ -1,3 +1,2 @@
-var google = google || {};
-google.config = google.config || {};
-google.config.CLIENT_ID = 'YOUR-CLIENT-ID';
+var hukABukApp = hukABukApp || {};
+hukABukApp.CLIENT_ID = 'YOUR-CLIENT-ID';
