--- a/application/app.yaml
+++ b/application/app.yaml
@@ -6,17 +6,23 @@ handlers:
 - url: /favicon\.ico
   static_files: favicon.ico
   upload: favicon\.ico
+  secure: always
 - url: /js
   static_dir: static/js
+  secure: always
 - url: /css
   static_dir: static/css
+  secure: always
 - url: /images
   static_dir: static/images
+  secure: always
 - url: /
   static_files: static/play-huk-a-buk.html
   upload: static/play-huk-a-buk\.html
+  secure: always
 - url: /foo
   script: _go_app
+  secure: always
 
 # Even though there's catch all routing, without these two lines
 # endpoints is not going to work.
